--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
+
+    <a href="recipes/guacamole.html" target="_blank" rel="noopener"> Guacamole recipe</a>
 </body>
 
 </html>
