completely filled out for 1 recipe

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -7,5 +7,25 @@
 <body>
     <h1>Simply Guacamole</h1>
     <img src="../images/simplyGuacamole.webp"
+    <br>
+    <h3> It's Avocado that made to be spread on to other food, it's a classic! </h3>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>5 avocados - peeled, pitted, and mashed</li>
+        <li>2 tablespoons fresh lemon juice</li>
+        <li>¾ cup minced green onion</li>
+        <li>½ cup minced fresh cilantro</li>
+        <li>salt and pepper, to taste</li>
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li>Stir together the avocado and lemon juice in a serving bowl</li>
+        <li>Add the green onion and cilantro</li>
+        <li>Season with salt and pepper</li>
+        <li> Server immediately. Keep the bowl from browning by store covered in refrigerator with avocado pits in the bowl</li>
+    </ol>
+
 </body>
 </html>
