Finished filling out the recipe, total of 4

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Odin Recipes</h1>
 
     <a href="recipes/guacamole.html" target="_blank" rel="noopener"> Guacamole recipe</a>
-    <a href="recipes/sushiRice.html">Sushi Rice</a>
-    <a href="recipes/misoSoup.html">Miso Soup</a>
-    <a href="recipes/eel Sauce.html">Eel Sauce</a>
+    <a href="recipes/sushiRice.html"  target="_blank" rel="noopener">Sushi Rice</a>
+    <a href="recipes/misoSoup.html"  target="_blank" rel="noopener">Miso Soup</a>
+    <a href="recipes/eel Sauce.html"  target="_blank" rel="noopener">Eel Sauce</a>
 </body>
 
 </html>
