--- a/recipes/eel Sauce.html
+++ b/recipes/eel Sauce.html
@@ -2,29 +2,26 @@
 <html>
 <head>
     <meta charset = "UTF-8"
-    <title>Guacamole Recipe</title>
+    <title>Eel Sauce Recipe</title>
 </head>
 <body>
-    <h1>Simply Guacamole</h1>
-    <img src="../images/simplyGuacamole.webp"
+    <h1>Eel Sauce</h1>
+    <img src="../images/eelSauce.webp"
     <br>
-    <h3> It's Avocado that made to be spread on to other food, it's a classic! </h3>
+    <h3> Eel sauce is also called nitsume or kabayaki sauce, and unagi no tare in Japanese. It's a sweet and salty sauce that goes great over grilled fish or chicken and is a common drizzle over sushi. Traditionally it is used on Japanese grilled eel and eel rolls. I also use this sauce over fresh cooked noodles for a quick snack. A half cup of dashi may be added to create a richer, more authentic flavor. (Dashi is a Japanese stock that is best made at home.)</h3>
 
     <h2>Ingredients</h2>
     <ul>
-        <li>5 avocados - peeled, pitted, and mashed</li>
-        <li>2 tablespoons fresh lemon juice</li>
-        <li>¾ cup minced green onion</li>
-        <li>½ cup minced fresh cilantro</li>
-        <li>salt and pepper, to taste</li>
+        <li>½ cup soy sauce</li>
+        <li>½ cup white sugar</li>
+        <li>½ cup mirin (Japanese sweet wine)</li>
     </ul>
 
     <h2>Directions</h2>
     <ol>
-        <li>Stir together the avocado and lemon juice in a serving bowl</li>
-        <li>Add the green onion and cilantro</li>
-        <li>Season with salt and pepper</li>
-        <li> Server immediately. Keep the bowl from browning by store covered in refrigerator with avocado pits in the bowl</li>
+        <li>Heat soy sauce, sugar, and mirin in a small saucepan over medium heat</li>
+        <li>Cook and stir until liquid is reduced to about 3/4 cup. </li>
+        <li>Serve</li>
     </ol>
 
 </body>
