--- a/recipes/misoSoup.html
+++ b/recipes/misoSoup.html
@@ -2,29 +2,30 @@
 <html>
 <head>
     <meta charset = "UTF-8"
-    <title>Guacamole Recipe</title>
+    <title>Miso Soup Recipe</title>
 </head>
 <body>
-    <h1>Simply Guacamole</h1>
-    <img src="../images/simplyGuacamole.webp"
+    <h1>Miso Soup</h1>
+    <img src="../images/misoSoup.webp"
     <br>
-    <h3> It's Avocado that made to be spread on to other food, it's a classic! </h3>
+    <h3> Miso soup is a traditional Japanese soup that starts with a dashi stock and is flavored with miso paste. Dashi is an umami-rich stock made from dried seaweed and dried fish. Miso paste, meanwhile, is a paste made from soybeans, salt, and koji rice. ! </h3>
+    <h3>Miso soup is traditionally served with rice. The brothy soup usually contains tofu and green onions. It can also feature seaweed, mushrooms, daikon, and more. </h3>
 
     <h2>Ingredients</h2>
     <ul>
-        <li>5 avocados - peeled, pitted, and mashed</li>
-        <li>2 tablespoons fresh lemon juice</li>
-        <li>¾ cup minced green onion</li>
-        <li>½ cup minced fresh cilantro</li>
-        <li>salt and pepper, to taste</li>
+        <li>4 cups water</li>
+        <li>2 teaspoons dashi granules</li>
+        <li>3 tablespoons miso paste</li>
+        <li>1 (8 ounce) package silken tofu, diced</li>
+        <li>2 green onions, sliced diagonally into 1/2 inch pieces</li>
     </ul>
 
     <h2>Directions</h2>
     <ol>
-        <li>Stir together the avocado and lemon juice in a serving bowl</li>
-        <li>Add the green onion and cilantro</li>
-        <li>Season with salt and pepper</li>
-        <li> Server immediately. Keep the bowl from browning by store covered in refrigerator with avocado pits in the bowl</li>
+        <li>Combine water and dashi granules in a medium saucepan over medium-high heat; bring to a boil.</li>
+        <li>Reduce heat to medium and whisk in miso paste.</li>
+        <li>Add green onions and tofu to the soup, and stir. </li>
+        <li>Simmer gently for 2 to 3 minutes before serving. </li>
     </ol>
 
 </body>
