--- a/recipes/sushiRice.html
+++ b/recipes/sushiRice.html
@@ -2,29 +2,32 @@
 <html>
 <head>
     <meta charset = "UTF-8"
-    <title>Guacamole Recipe</title>
+    <title>Sushi Rice Recipe</title>
 </head>
 <body>
-    <h1>Simply Guacamole</h1>
-    <img src="../images/simplyGuacamole.webp"
+    <h1>Sushi Rice</h1>
+    <img src="../images/sushiRice.webp"
     <br>
-    <h3> It's Avocado that made to be spread on to other food, it's a classic! </h3>
+    <h3> It's the rice that commonly used for making sushi. </h3>
+    <h3> You can eat this alone or roll into your favorite sushi roll with ingredients of choice.</h3>
+    <h3>Sushi rice is less of a type of rice than it is a preparation method. It's cooked short-grain white rice combined with rice vinegar and other ingredients, cooled completely, and then used to make sushi rolls. </h3>
 
     <h2>Ingredients</h2>
     <ul>
-        <li>5 avocados - peeled, pitted, and mashed</li>
-        <li>2 tablespoons fresh lemon juice</li>
-        <li>¾ cup minced green onion</li>
-        <li>½ cup minced fresh cilantro</li>
-        <li>salt and pepper, to taste</li>
+        <li>2 cups uncooked glutinous white rice (sushi rice)</li>
+        <li>3 cups water</li>
+        <li>½ cup rice vinegar</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>¼ cup white sugar</li>
+        <li>1 teaspoon salt</li>
     </ul>
 
     <h2>Directions</h2>
     <ol>
-        <li>Stir together the avocado and lemon juice in a serving bowl</li>
-        <li>Add the green onion and cilantro</li>
-        <li>Season with salt and pepper</li>
-        <li> Server immediately. Keep the bowl from browning by store covered in refrigerator with avocado pits in the bowl</li>
+        <li>Rinse the rice in a strainer or colander under cold running water until the water runs clear. </li>
+        <li>Combine rice and water in a saucepan over medium-high heat and bring to a boil. Reduce heat to low, cover, and cook until rice is tender and all water has been absorbed, about 20 minutes. Remove from stove and set aside until cool enough to handle. </li>
+        <li>Meanwhile, combine rice vinegar, oil, sugar, and salt in a small saucepan over medium heat. Cook until the sugar has dissolved. </li>
+        <li> Allow to cool, then stir into the cooked rice. While mixture will appear very wet at first, keep stirring and rice will dry as it cools. </li>
     </ol>
 
 </body>
