added styling for title heading

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset = "UTF-8"
     <title>Guacamole Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Simply Guacamole</h1>
+    <h1 class="recipeTitle">Simply Guacamole</h1>
     <img src="../images/simplyGuacamole.webp"
     <br>
-    <h3> It's Avocado that made to be spread on to other food, it's a classic! </h3>
+    <p> It's Avocado that made to be spread on to other food, it's a classic! </h3>
 
     <h2>Ingredients</h2>
     <ul>
