--- a/recipes/sushiRice.html
+++ b/recipes/sushiRice.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset = "UTF-8"
     <title>Sushi Rice Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Sushi Rice</h1>
+    <h1 class="recipeTitle">Sushi Rice</h1>
     <img src="../images/sushiRice.webp"
     <br>
-    <h3> It's the rice that commonly used for making sushi. </h3>
-    <h3> You can eat this alone or roll into your favorite sushi roll with ingredients of choice.</h3>
-    <h3>Sushi rice is less of a type of rice than it is a preparation method. It's cooked short-grain white rice combined with rice vinegar and other ingredients, cooled completely, and then used to make sushi rolls. </h3>
+    <p> It's the rice that commonly used for making sushi. </h3>
+    <p> You can eat this alone or roll into your favorite sushi roll with ingredients of choice.</h3>
+    <p>Sushi rice is less of a type of rice than it is a preparation method. It's cooked short-grain white rice combined with rice vinegar and other ingredients, cooled completely, and then used to make sushi rolls. </h3>
 
     <h2>Ingredients</h2>
     <ul>
