--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset "UTF-8">
     <title>Recipe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="recipeTitle">Odin Recipes</h1>
 
     <a href="recipes/guacamole.html" target="_blank" rel="noopener"> Guacamole recipe</a>
     <br>
