--- a/recipes/eel Sauce.html
+++ b/recipes/eel Sauce.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset = "UTF-8"
     <title>Eel Sauce Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Eel Sauce</h1>
+    <h1 class="recipeTitle">Eel Sauce</h1>
     <img src="../images/eelSauce.webp"
     <br>
-    <h3> Eel sauce is also called nitsume or kabayaki sauce, and unagi no tare in Japanese. It's a sweet and salty sauce that goes great over grilled fish or chicken and is a common drizzle over sushi. Traditionally it is used on Japanese grilled eel and eel rolls. I also use this sauce over fresh cooked noodles for a quick snack. A half cup of dashi may be added to create a richer, more authentic flavor. (Dashi is a Japanese stock that is best made at home.)</h3>
+    <p> Eel sauce is also called nitsume or kabayaki sauce, and unagi no tare in Japanese. It's a sweet and salty sauce that goes great over grilled fish or chicken and is a common drizzle over sushi. Traditionally it is used on Japanese grilled eel and eel rolls. I also use this sauce over fresh cooked noodles for a quick snack. A half cup of dashi may be added to create a richer, more authentic flavor. (Dashi is a Japanese stock that is best made at home.)</h3>
 
     <h2>Ingredients</h2>
     <ul>
