--- a/recipes/misoSoup.html
+++ b/recipes/misoSoup.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset = "UTF-8"
     <title>Miso Soup Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Miso Soup</h1>
+    <h1 class="recipeTitle">Miso Soup</h1>
     <img src="../images/misoSoup.webp"
     <br>
-    <h3> Miso soup is a traditional Japanese soup that starts with a dashi stock and is flavored with miso paste. Dashi is an umami-rich stock made from dried seaweed and dried fish. Miso paste, meanwhile, is a paste made from soybeans, salt, and koji rice. ! </h3>
-    <h3>Miso soup is traditionally served with rice. The brothy soup usually contains tofu and green onions. It can also feature seaweed, mushrooms, daikon, and more. </h3>
+    <p> Miso soup is a traditional Japanese soup that starts with a dashi stock and is flavored with miso paste. Dashi is an umami-rich stock made from dried seaweed and dried fish. Miso paste, meanwhile, is a paste made from soybeans, salt, and koji rice. ! </h3>
+    <p>Miso soup is traditionally served with rice. The brothy soup usually contains tofu and green onions. It can also feature seaweed, mushrooms, daikon, and more. </h3>
 
     <h2>Ingredients</h2>
     <ul>
