added class for subSection and all background color

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1 class="recipeTitle">Odin Recipes</h1>
 
-    <a href="recipes/guacamole.html" target="_blank" rel="noopener"> Guacamole recipe</a>
+    <a class = "recipeLink" href="recipes/guacamole.html" target="_blank" rel="noopener"> Guacamole</a>
     <br>
-    <a href="recipes/sushiRice.html"  target="_blank" rel="noopener">Sushi Rice</a>
+    <a class = "recipeLink" href="recipes/sushiRice.html"  target="_blank" rel="noopener">Sushi Rice</a>
     <br>
-    <a href="recipes/misoSoup.html"  target="_blank" rel="noopener">Miso Soup</a>
+    <a class = "recipeLink" href="recipes/misoSoup.html"  target="_blank" rel="noopener">Miso Soup</a>
     <br>
-    <a href="recipes/eel Sauce.html"  target="_blank" rel="noopener">Eel Sauce</a>
+    <a class = "recipeLink" href="recipes/eel Sauce.html"  target="_blank" rel="noopener">Eel Sauce</a>
     <br>
 </body>
 
