--- a/recipes/eel Sauce.html
+++ b/recipes/eel Sauce.html
@@ -11,14 +11,14 @@
     <br>
     <p> Eel sauce is also called nitsume or kabayaki sauce, and unagi no tare in Japanese. It's a sweet and salty sauce that goes great over grilled fish or chicken and is a common drizzle over sushi. Traditionally it is used on Japanese grilled eel and eel rolls. I also use this sauce over fresh cooked noodles for a quick snack. A half cup of dashi may be added to create a richer, more authentic flavor. (Dashi is a Japanese stock that is best made at home.)</h3>
 
-    <h2>Ingredients</h2>
+    <h2 id="ingredientsSubTitle">Ingredients</h2>
     <ul>
         <li>½ cup soy sauce</li>
         <li>½ cup white sugar</li>
         <li>½ cup mirin (Japanese sweet wine)</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2 id ="directionsSubTitle">Directions</h2>
     <ol>
         <li>Heat soy sauce, sugar, and mirin in a small saucepan over medium heat</li>
         <li>Cook and stir until liquid is reduced to about 3/4 cup. </li>
