--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -11,7 +11,7 @@
     <br>
     <p> It's Avocado that made to be spread on to other food, it's a classic! </h3>
 
-    <h2>Ingredients</h2>
+    <h2 id="ingredientsSubTitle">Ingredients</h2>
     <ul>
         <li>5 avocados - peeled, pitted, and mashed</li>
         <li>2 tablespoons fresh lemon juice</li>
@@ -20,7 +20,7 @@
         <li>salt and pepper, to taste</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2 id ="directionsSubTitle">Directions</h2>
     <ol>
         <li>Stir together the avocado and lemon juice in a serving bowl</li>
         <li>Add the green onion and cilantro</li>
