--- a/recipes/misoSoup.html
+++ b/recipes/misoSoup.html
@@ -12,7 +12,7 @@
     <p> Miso soup is a traditional Japanese soup that starts with a dashi stock and is flavored with miso paste. Dashi is an umami-rich stock made from dried seaweed and dried fish. Miso paste, meanwhile, is a paste made from soybeans, salt, and koji rice. ! </h3>
     <p>Miso soup is traditionally served with rice. The brothy soup usually contains tofu and green onions. It can also feature seaweed, mushrooms, daikon, and more. </h3>
 
-    <h2>Ingredients</h2>
+    <h2 id="ingredientsSubTitle">Ingredients</h2>
     <ul>
         <li>4 cups water</li>
         <li>2 teaspoons dashi granules</li>
@@ -21,7 +21,7 @@
         <li>2 green onions, sliced diagonally into 1/2 inch pieces</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2 id ="directionsSubTitle">Directions</h2>
     <ol>
         <li>Combine water and dashi granules in a medium saucepan over medium-high heat; bring to a boil.</li>
         <li>Reduce heat to medium and whisk in miso paste.</li>
