--- a/recipes/sushiRice.html
+++ b/recipes/sushiRice.html
@@ -13,7 +13,7 @@
     <p> You can eat this alone or roll into your favorite sushi roll with ingredients of choice.</h3>
     <p>Sushi rice is less of a type of rice than it is a preparation method. It's cooked short-grain white rice combined with rice vinegar and other ingredients, cooled completely, and then used to make sushi rolls. </h3>
 
-    <h2>Ingredients</h2>
+    <h2 id="ingredientsSubTitle">Ingredients</h2>
     <ul>
         <li>2 cups uncooked glutinous white rice (sushi rice)</li>
         <li>3 cups water</li>
@@ -23,7 +23,7 @@
         <li>1 teaspoon salt</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2 id ="directionsSubTitle">Directions</h2>
     <ol>
         <li>Rinse the rice in a strainer or colander under cold running water until the water runs clear. </li>
         <li>Combine rice and water in a saucepan over medium-high heat and bring to a boil. Reduce heat to low, cover, and cook until rice is tender and all water has been absorbed, about 20 minutes. Remove from stove and set aside until cool enough to handle. </li>
